--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     height: 120px;
     top: 0px;
     background-color: rgb(236, 239, 243);
-    z-index: 5;
+    z-index: 10;
     box-shadow: 2px 2px 2px #406f26;
 }
 #nome {
@@ -103,16 +103,21 @@ html, body {height: 100%;}
     position: relative;
     top: 170px;
     border-radius: 30px;
-    border: 2px solid #000;
-    box-shadow: 10px 10px 10px #000;
+    border: 3px solid #000;
     color: #fff;
+    transition-duration: 0.5s;
+}
+.container:hover {
+    box-shadow: 7px 7px 7px #000;
 }
 #cons {
     text-align: center;
     position: absolute;
     left: 100px;
-    top: 50px;
+    top: 110px;
     text-shadow: 1px 1px 1px #000;
+    font-size: 40px;
+    width: 300px;
 }
 #ft {
     display: block;
@@ -120,8 +125,7 @@ html, body {height: 100%;}
     width: 100%;
     height: 500px;
     background: url(back.jpg);
-    position: relative;
-    bottom: -280px;
+    margin-top: 200px;
     border-top: 5px solid #2ead49;
     color: #39e65e;
     text-align: center;
@@ -132,15 +136,15 @@ html, body {height: 100%;}
     margin: 0 auto;
     height: 200px;
     position: relative;
-    top: 50px;
+    top: 70px;
 }
 #tft {
     position: relative;
-    top: 30px;
+    top: 50px;
 }
 #sft {
     position: relative;
-    top: 80px;
+    top: 100px;
 }
 #mpd {
     display: block;
@@ -149,4 +153,7 @@ html, body {height: 100%;}
     right: 30px;
     top: 190px;
     border: 3px solid #39e65e;
+    z-index: 4;
+    transition-duration: 0.3s;
+    cursor: pointer;
 }
