--- a/style.css
+++ b/style.css
@@ -4,22 +4,20 @@
     border: 2px solid rgb(31, 230, 91);
     height: 120px;
     top: 0px;
-    background-color: rgb(236, 239, 243);
+    background: url(hdbg.jpg);
     z-index: 10;
-    box-shadow: 2px 2px 2px #406f26;
+    box-shadow: inset 0px 0px 5px 5px rgba(0, 70, 0, 0.5);
 }
 #nome {
     color: #39e65e;
     text-shadow: 2px 2px 2px#406f26;
-    position: absolute;
-    left: 170px;
-    top: 20px;
 }
 body {
     margin: 0;
     background: url(nt.jpg);
     background-repeat: no-repeat;
     background-position: center;
+    background-attachment: fixed;
     background-size: cover;
 }
 html {
@@ -30,8 +28,6 @@ html {
 }
 #tvimg {
     display: block;
-    position: absolute;
-    left: 30px;
     margin: 0 auto;
     height: 120px;
 }
@@ -67,6 +63,10 @@ html, body {height: 100%;}
   color: #2b8894;
   transform: translateY(-7px);
 }
+.btn:active {
+    transform: translateY(2px);
+    transition-duration: 0s;
+}
 #btn_ong {
     font-size: 15px;
     background-color: #2ead49;
@@ -87,12 +87,19 @@ html, body {height: 100%;}
     color: #18525a;
     transform: translateY(-2px);
 }
+#btn_ong:active {
+    transform: translateY(2px);
+    transition-duration: 0s;
+}
 .btns {
     display: flex;
     position: absolute;
-    top: 40px;
-    right: 30px;
+    right: 0px;
     align-items: center;
+    background-color: #18525a;
+    height: 100%;
+    padding-left: 240px;
+    padding-right: 20px;
 }
 .container {
     display: block;
@@ -108,28 +115,35 @@ html, body {height: 100%;}
     transition-duration: 0.5s;
 }
 .container:hover {
-    box-shadow: 7px 7px 7px #000;
+    box-shadow: inset 0px 0px 5px 5px rgba(0, 0, 0, 1);
 }
 #cons {
     text-align: center;
     position: absolute;
-    left: 100px;
     top: 110px;
+    left: 100px;
     text-shadow: 1px 1px 1px #000;
     font-size: 40px;
     width: 300px;
+    animation-name: apar;
+    animation-duration: 2s;
 }
 #ft {
-    display: block;
+    display: flex;
+    flex-direction: column;
     margin: 0 auto;
     width: 100%;
     height: 500px;
     background: url(back.jpg);
-    margin-top: 200px;
     border-top: 5px solid #2ead49;
     color: #39e65e;
     text-align: center;
     text-shadow: 5px 5px 5px #406f26;
+    box-shadow: inset 0px 0px 5px 5px rgba(0, 100, 0, 1);
+    transition-duration: 0.3s;
+}
+#ft:hover {
+    border-top: 5px solid #1e7c33;
 }
 #flh {
     display: block;
@@ -156,4 +170,97 @@ html, body {height: 100%;}
     z-index: 4;
     transition-duration: 0.3s;
     cursor: pointer;
+    border-radius: 20px;
+}
+.ctmain {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 800px;
+    background: url(bgverde.jpg);
+    margin: 0 auto;
+    margin-top: 220px;
+    border: 4px solid #18525a;
+    box-shadow: inset 0px 0px 5px 5px rgba(0, 70, 0, 1);
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: relative;
+    left: -7px;
+}
+.cont1 {
+    display: block;
+    margin: 0 auto;
+    height: 700px;
+    width: 500px;
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 30px;
+    border: 3px solid #000;
+    color: #fff;
+    transition-duration: 0.5s;
+}
+.cont2 {
+    display: block;
+    margin: 0 auto;
+    height: 700px;
+    width: 500px;
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 30px;
+    border: 3px solid #000;
+    color: #fff;
+    transition-duration: 0.5s;
+}
+.cont3 {
+    display: block;
+    margin: 0 auto;
+    height: 700px;
+    width: 500px;
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 30px;
+    border: 3px solid #000;
+    color: #fff;
+    transition-duration: 0.5s;
+}
+.cont1:hover {
+    box-shadow: inset 0px 0px 5px 5px rgba(0, 0, 0, 0.5);
+}
+.cont2:hover {
+    box-shadow: inset 0px 0px 5px 5px rgba(0, 0, 0, 0.5);
+}
+.cont3:hover {
+    box-shadow: inset 0px 0px 5px 5px rgba(0, 0, 0, 0.5);
+}
+.vv {
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    position: absolute;
+    left: 0px;
+    background-color: #18525a;
+    padding-left: 20px;
+    padding-right: 60px;
+    box-shadow: inset 100px 0px 0px 0px rgba(0, 90, 0, 0.3);
+}
+.borda {
+    height: 120px;
+    width: 100px;
+    background-color: #18525a;
+    clip-path: none;
+    -webkit-clip-path: polygon(100% 0%, 0% 100%, 100% 100%);
+    transform: rotate(180deg);
+    position: absolute;
+    left: 465px;
+}
+.borda2 {
+    height: 120px;
+    width: 100px;
+    background-color: #18525a;
+    clip-path: none;
+    -webkit-clip-path: polygon(100% 0%, 0% 100%, 100% 100%);
+    transform: rotate(0deg);
+    position: absolute;
+    right: 500px;
+}
+@keyframes apar {
+    from{opacity: 0; left: 40px;}
+    to{opacity: 1; left: 100px;}
 }
