--- a/style.css
+++ b/style.css
@@ -138,6 +138,9 @@ html, body {height: 100%;}
     height: 100%;
     padding-left: 220px;
     padding-right: 20px;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
 }
 .container {
     display: block;
@@ -433,6 +436,9 @@ html, body {height: 100%;}
     border-radius: 20px;
     border: 1px solid #1b633f;
 }
+.ongs::-webkit-scrollbar-thumb:active {
+    background: #17abbb;
+}
 #ong1 {
     display: flex;
     align-items: center;
@@ -687,28 +693,39 @@ html, body {height: 100%;}
 }
 @media screen and (max-width: 520px) {
     .container {
-        max-width: 350px;
+        width: 400px;
         height: 500px;
     }
     #mpd {
         height: 150px;
         top: 280px;
-        right: 65px;
+        right: 90px;
     }
     #cons {
-        left: 30px;
+        left: 20px;
+        width: 90%;
         top: 90px;
         font-size: 20px;
     }
     @keyframes apar {
         from{opacity: 0; left: 0px;}
-        to{opacity: 1; left: 30px;}
+        to{opacity: 1; left: 20px;}
     }
 }
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 420px) {
+    .container {
+        width: 100%;
+    }
+    #mpd {
+        display: block;
+        position: relative;
+        margin: 0 auto;
+        left: 0;
+        top: 300px;
+    }
     .cont1, .cont2, .cont3 {
         height: 800px;
-        width: 300px;
+        width: 100%;
     }
     .cont1 p, .cont2 p, .cont3 p {
         width: 200px;
@@ -725,9 +742,19 @@ html, body {height: 100%;}
     }
     .ctmain {
         height: 2500px;
-        width: 98%;
+        width: 100%;
     }
     .vv {
         display: none;
+    }
+}
+@media screen and (max-width: 300px) {
+    @keyframes apar {
+        from{opacity: 0; left: -10px;}
+        to{opacity: 1; left: 10px;}
+    }
+    #cons {
+        left: 10px;
+        width: 90%;
     }
 }
