--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ html, body {height: 100%;}
 
 .btn:hover {
   background-color: #90ff50;
-      box-shadow: 0px 15px 20px rgba(55, 155, 122, 0.73);
+    box-shadow: 0px 15px 20px rgba(55, 155, 122, 0.73);
   color: #2b8894;
   transform: translateY(-7px);
 }
@@ -217,6 +217,9 @@ html, body {height: 100%;}
     z-index: 4;
     transition-duration: 0.3s;
     border-radius: 20px;
+}
+#mpd:hover {
+    transform: translateY(-4px);
 }
 .ctmain {
     display: flex;
@@ -355,12 +358,19 @@ html, body {height: 100%;}
 }
 .cont3:hover img {
     border: 3px solid #2b9642;
+    transform: translateY(-4px);
 }
 .cont3:hover p {
     color: #e4f3bc;
 }
 .cont3:hover h1 {
     color: #cce685;
+}
+.cont1:hover img {
+    transform: translateY(-4px);
+}
+.cont2:hover img {
+    transform: translateY(-4px);
 }
 .cont1:hover {
     box-shadow: inset 0px 0px 5px 5px rgba(0, 0, 0, 0.5);
